--- a/src/components/portfolio/Portfolio.module.scss
+++ b/src/components/portfolio/Portfolio.module.scss
@@ -47,10 +47,9 @@
 }
 
 .project__hidden {
-  top: 0;
-  z-index: 300;
   position: fixed;
   top: 0;
+  z-index: var(--z-index-overlay);
 
   &.active &-overlay {
     transform: translate(0%, 0%);
@@ -73,7 +72,7 @@
     background-color: #000;
     width: 100%;
     height: 100vh;
-    z-index: 200;
+    // z-index: 200;
     opacity: 0.8;
     transform: translate(0%, -200%);
     transition: all 0.1s ease-in;
@@ -91,7 +90,7 @@
     top: 15%;
     left: 50%;
     transform: translate(-50%, -200%);
-    z-index: 400;
+    // z-index: 400;
     padding: 3rem 5rem;
     transition: all 0.1s ease-in;
   }
@@ -259,7 +258,7 @@
   position: fixed;
   top: 10%;
   right: 5%;
-  z-index: 1000;
+  // z-index: 1000;
   transition: all 0.1s ease-in;
   transform: translate(0%, -200%);
   background-color: transparent;
