--- a/src/components/portfolio/ProjectItem.module.scss
+++ b/src/components/portfolio/ProjectItem.module.scss
@@ -143,15 +143,6 @@
     opacity: 1;
     visibility: visible;
   }
-
-  &-link {
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    z-index: 5;
-  }
 }
 
 @keyframes slick-hover {
