--- a/src/components/testimonials/Testimonials.module.scss
+++ b/src/components/testimonials/Testimonials.module.scss
@@ -105,8 +105,6 @@
       position: absolute;
       width: 180px;
       height: 180px;
-      z-index: 1000;
-
       fill: rgba(0, 0, 0, 0.06);
       right: 70px;
       bottom: -92px;
