--- a/src/components/video/Video.module.scss
+++ b/src/components/video/Video.module.scss
@@ -8,7 +8,7 @@
     height: auto;
 
     position: relative;
-    z-index: 2;
+    // z-index: 100;
     padding: 160px 0px 150px 0px;
     background-color: black;
 
@@ -126,7 +126,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  // z-index: 5000;
 }
 
 .video-container {
